syntax = "proto3";

package calculator;

option go_package = "calculator/api/calculator;calculator";

service URLService {
  rpc Calculate(CalculateRequest) returns (CalculateResponse) {}
}

// Запрос на расчет.
message CalculateRequest {
  message Data {
    // Тип инструкции
    string type = 1;
    // Тип вычислительной операции
    optional string op = 2;
    // Название переменной
    string var = 3;

    // Левое значение
    oneof left_value {
        int64 left_const = 4;
        string left_var = 5;
    }

    // Правое значение
    oneof right_value {
        int64 right_const = 6;
        string right_var = 7;
    }
  }

  repeated Data data = 1;
}

// Ответ на запрос расчета.
message CalculateResponse {
  message Item {
    // Название переменной
    string var = 1;
    // Значение ответа
    string value = 2;
  }

  repeated Item items = 1;
}
